--- a/package.json
+++ b/package.json
@@ -1,6 +1,85 @@
 {
+  "name": "advent-of-code",
+  "version": "1.0.0",
+  "description": "dec-2",
+  "main": "rockPaperScissor.js",
   "dependencies": {
+    "body-parser": "^1.20.1",
+    "bytes": "^3.1.2",
+    "array-flatten": "^1.1.1",
+    "accepts": "^1.3.8",
+    "content-disposition": "^0.5.4",
+    "cookie": "^0.5.0",
+    "content-type": "^1.0.4",
+    "call-bind": "^1.0.2",
+    "cookie-signature": "^1.0.6",
+    "debug": "^2.6.9",
+    "depd": "^2.0.0",
+    "data-uri-to-buffer": "^4.0.0",
+    "destroy": "^1.2.0",
+    "encodeurl": "^1.0.2",
+    "ee-first": "^1.1.1",
+    "etag": "^1.8.1",
+    "finalhandler": "^1.2.0",
     "express": "^4.18.2",
-    "node-fetch": "^3.3.0"
-  }
+    "fetch-blob": "^3.2.0",
+    "forwarded": "^0.2.0",
+    "get-intrinsic": "^1.1.3",
+    "fresh": "^0.5.2",
+    "function-bind": "^1.1.1",
+    "escape-html": "^1.0.3",
+    "iconv-lite": "^0.4.24",
+    "has-symbols": "^1.0.3",
+    "has": "^1.0.3",
+    "inherits": "^2.0.4",
+    "formdata-polyfill": "^4.0.10",
+    "merge-descriptors": "^1.0.1",
+    "http-errors": "^2.0.0",
+    "media-typer": "^0.3.0",
+    "mime": "^1.6.0",
+    "methods": "^1.1.2",
+    "mime-types": "^2.1.35",
+    "ipaddr.js": "^1.9.1",
+    "node-fetch": "^3.3.0",
+    "mime-db": "^1.52.0",
+    "ms": "^2.0.0",
+    "negotiator": "^0.6.3",
+    "node-domexception": "^1.0.0",
+    "object-inspect": "^1.12.2",
+    "qs": "^6.11.0",
+    "on-finished": "^2.4.1",
+    "path-to-regexp": "^0.1.7",
+    "range-parser": "^1.2.1",
+    "parseurl": "^1.3.3",
+    "safer-buffer": "^2.1.2",
+    "raw-body": "^2.5.1",
+    "setprototypeof": "^1.2.0",
+    "proxy-addr": "^2.0.7",
+    "safe-buffer": "^5.2.1",
+    "type-is": "^1.6.18",
+    "unpipe": "^1.0.0",
+    "send": "^0.18.0",
+    "toidentifier": "^1.0.1",
+    "statuses": "^2.0.1",
+    "serve-static": "^1.15.0",
+    "vary": "^1.1.2",
+    "side-channel": "^1.0.4",
+    "utils-merge": "^1.0.1",
+    "web-streams-polyfill": "^3.2.1",
+    "type": "module"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/AndyPark20/advent-of-code.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/AndyPark20/advent-of-code/issues"
+  },
+  "homepage": "https://github.com/AndyPark20/advent-of-code#readme"
 }
